DUN-8 | WIP: Обновление тегов
