# routes/API/tags.php
@@ -16,4 +16,5 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('tags', 'App\Http\Controllers\API\TagsController@index');
     Route::post('tags', 'App\Http\Controllers\API\TagsController@store');
+    Route::put('tags/{id}', 'App\Http\Controllers\API\TagsController@update');
 });
